# rust-yt-summarizer

./: Cargo.toml  README.md
.github/workflows/: daily_summary.yml
src/: gemini.rs  main.rs  telegram.rs  transcript.rs  youtube.rs
